--- a/site/package.json
+++ b/site/package.json
@@ -22,7 +22,8 @@
     "express-jwt-permissions": "^1.0.0",
     "jsonwebtoken": "^7.3.0",
     "morgan": "^1.8.2",
-    "sqlite3": "^3.1.8"
+    "sqlite3": "^3.1.8",
+    "vue-analytics": "^5.16.4"
   },
   "devDependencies": {
     "animate.css": "^3.5.2",
@@ -79,7 +80,7 @@
     "less-loader": "^4.0.5",
     "lolex": "^2.1.1",
     "mocha": "^3.2.0",
-    "node-sass": "^4.5.0",
+    "node-sass": "^4.12.0",
     "nodemon": "^1.11.0",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
